feat: 行程规划改为自由文本输入；生成加载提示与深色遮罩；修复导航定位失败（坐标缓存与高德搜索回退）；移除预算页面并整合预算分析；登录后展示并导入云端行程

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.23.1",
     "@amap/amap-jsapi-loader": "^1.0.1",
     "@supabase/supabase-js": "^2.45.4",
+    "pdfkit": "^0.15.0",
     "zustand": "^4.5.2",
     "js-cookie": "^3.0.5",
     "chart.js": "^4.4.3",
