--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,29 @@
 server {
   listen 80;
-  server_name _;
+  server_name 127.0.0.1 localhost;
   root /usr/share/nginx/html;
   index index.html;
 
   location / {
     try_files $uri /index.html;
+  }
+
+  # 自定义地图样式代理（如未使用可忽略）
+  # 注意：请将下面的 jscode=你的安全密钥 替换为你在高德控制台生成的安全密钥
+  location /_AMapService/v4/map/styles {
+    set $args "$args&jscode=caf989874f6e31d7e1279f9492619c96";
+    proxy_pass https://webapi.amap.com/v4/map/styles; 
+    proxy_set_header Host webapi.amap.com;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  }
+
+  # Web 服务 API 代理，将请求转发到 restapi.amap.com 并自动附加安全密钥
+  location /_AMapService/ {
+    set $args "$args&jscode=caf989874f6e31d7e1279f9492619c96";
+    proxy_pass https://restapi.amap.com/;
+    proxy_set_header Host restapi.amap.com;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   }
 }
